--- a/CampoMinato_Definitivo/CampoMinato/CampoMinato.csproj
+++ b/CampoMinato_Definitivo/CampoMinato/CampoMinato.csproj
@@ -79,7 +79,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Bandierina.png" />
+    <Content Include="Bandierina.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
